--- a/statics/css/style.css
+++ b/statics/css/style.css
@@ -91,7 +91,7 @@ nav a:hover {
     position: absolute;
     width: 100%;
     height: 100%;
-    background-color:#1e1e1e; 
+    background-color:#4e3c3c; 
         /* linear-gradient(45deg, transparent 48%, #ff4757 49%, #ff4757 51%, transparent 52%),
         linear-gradient(-45deg, transparent 48%, #ff4757 49%, #ff4757 51%, transparent 52%); */
     background-size: 200px 200px;
